Style pastes and fix FF wrapping issue
Ref #115

--- a/media/css/style.css
+++ b/media/css/style.css
@@ -10115,9 +10115,19 @@ body {
 .lcb-message-text {
   word-wrap: break-word;
 }
+.lcb-message-text pre {
+  padding: 10px;
+  margin: 0;
+  border: 3px solid #cccccc;
+  border-top: none;
+  border-bottom: none;
+  border-radius: 4px;
+}
 @-moz-document url-prefix() {
   .lcb-message-text {
-    width: 0;
-    word-wrap: normal;
+    word-break: break-all;
+  }
+  .lcb-message-text pre {
+    white-space: pre-wrap;
   }
 }
